# mini-utf8

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
cmake/in/: mini_utf8Config.cmake.in
cmake/modules/: CMakeLists.txt
include/: mini_utf8.h
include/mini_utf8/: mini_utf8.h
include/mini_utf8/internal/: bitmasks.h  gen_array.h
src/: main.c  mini_utf8.c
